--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,16 @@
     <groupId>org.example</groupId>
     <artifactId>Spring_1</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+    <modules>
+        <module>homeWork_1</module>
+        <module>HomeWork_2</module>
+    </modules>
+    <packaging>pom</packaging>
 
 </project>
